--- a/Playground/Playground.vcxproj.filters
+++ b/Playground/Playground.vcxproj.filters
@@ -17,4 +17,9 @@
   <ItemGroup>
     <None Include="Playground.licenseheader" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
