--- a/Playground/Playground.vcxproj
+++ b/Playground/Playground.vcxproj
@@ -21,6 +21,9 @@
   <ItemGroup>
     <None Include="Playground.licenseheader" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Common.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{56DAE541-7ADD-4268-A2D7-A7181B7A10E8}</ProjectGuid>
