--- a/Codedrop/Codedrop.vcxitems.filters
+++ b/Codedrop/Codedrop.vcxitems.filters
@@ -20,5 +20,8 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch2 Demo 5.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch2 Demo 6.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch2 Demo 7.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch2 Demo 8.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch2 Demo 9.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch2 Demo 10.cpp" />
   </ItemGroup>
 </Project>
