--- a/Codedrop/Codedrop.vcxitems.filters
+++ b/Codedrop/Codedrop.vcxitems.filters
@@ -41,5 +41,13 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\extra array 3.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\extra array 4.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\extra array 5.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 1.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 2.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 3.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 4.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 5.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 6.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 7.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 8.cpp" />
   </ItemGroup>
 </Project>
