--- a/Codedrop/Codedrop.vcxitems.filters
+++ b/Codedrop/Codedrop.vcxitems.filters
@@ -49,5 +49,10 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 6.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 7.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 8.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 9.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 10.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 12.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 13.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 11.cpp" />
   </ItemGroup>
 </Project>
