--- a/Codedrop/Codedrop.vcxitems.filters
+++ b/Codedrop/Codedrop.vcxitems.filters
@@ -55,5 +55,6 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 13.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Demo 11.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Work 1.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\extra factorial 1.cpp" />
   </ItemGroup>
 </Project>
