--- a/Codedrop/Codedrop.vcxitems.filters
+++ b/Codedrop/Codedrop.vcxitems.filters
@@ -61,5 +61,6 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Work 4.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Work 5.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\ch3 Work 6.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\Playground\extra functions 1.cpp" />
   </ItemGroup>
 </Project>
